--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,14 +1,45 @@
 ## 问题列表记录
 
+* 点击home滚动到顶部-在滚动中需要停止滚动
+
+### 上线打包的记录
+
+```objc
+
+ExchangeOrderCell.m
+
+打开商品图片
+//    [productImgView setImageWithURL:[NSURL URLWithString:_exchangeOrder.productImg] placeholderImage:GetImgName(@"productItem_banner_placeHolder") animated:true];
+
+UserCertProductDetailVC.m
+
+
+/** 商品虚拟id，用于查询兑换记录证书信息 */
+@property (nonatomic, copy) NSString *productVirtualId;
+删除这行
+
+subLabel改成2行
+    // update frame
+    [subLabel sizeToFit];
+    if (subLabel.height > subLabel.font.lineHeight) subLabel.height = subLabel.font.lineHeight *2;
+    triangleArrowImgV.top = subLabel.bottom + 12*ScreenWidth6Ratio;
+    descLabel.top = triangleArrowImgV.bottom;
+    
+    CGFloat certTop = descLabel.bottom + 32*ScreenWidth6Ratio;
+    
+    commonwealImgV.top = certTop;
+    certNumImgV.top = certTop;    
+    CGFloat fansLogoTop = certNumImgV.bottom + 24*ScreenWidth6Ratio;
+    
+    spLine.top = fansLogoImgV.top = activityImgV.top = fansLogoTop;
+
+```
+
 ### 排行榜问题优化
 
-* [ ] 卡片头部是Web拉起App的时候展示pick过
 
-* [x] 添加-没有期数的默认页
 * [ ] 优化-小数点浮动数字
-* [ ] cut2DecimalFloatByFloat改成reviseFloatString
 
-* [ ] 首页的点击无法刷新问题
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
@@ -16,44 +47,15 @@
 ![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
 
 
-### 主分支-需要的改动
-
-* [ ]  饭票的小数位-整理可能发生的饭票小数点，所有位置，整理类型并测试
-
-```objc
-1. StarCertProductModel.m
-
-- (BOOL)modelCustomTransformFromDictionary:(NSDictionary *)dic {
-
-    CGFloat userToTicket_f = [dic yh_floatForKey:@"userToTicket"];
-    self.userToTicket = [[CalculateTool sharedInstance] getNumber2DecimalStr:userToTicket_f];
-
-2 .TaskUserFollowModel.m
-
-- (BOOL)modelCustomTransformFromDictionary:(NSDictionary *)dic {
-    CGFloat ticketForStar_f = [dic[@"ticketForStar"] floatValue];
-    
-    self.userTicketDesc = [[CalculateTool sharedInstance] getTicketAttrbuteStr:self.userTicket decimalFont:TaskFloatHeaderView_numberMinFont];
-    self.ticketForStar = [NSString cutBy2DecimalFloatNumber:ticketForStar_f];
-    return YES;
-}
-```
-
-* [ ] 任务完成回调
-
 ## 需求
 
 * [ ] 请求超时的提示
-* [ ] 未登录的情况隐藏小球
 
 ## 后续优化
 
 * [ ] 进度条添加动画
-* [ ] TabbarItem再次点击回到底部
 * [ ] 首页选择第三个tab,下拉刷新到定义一个tab,然后滚动到底3个tab,发现第三个没有执行刷新
 
-* [x] 服务端发布接口错误时候，App不断请求,  网络权限不开的时候，viewDidLayoutSubviews不断调用
-* [x] SDWebImage加载的时候添加加载动画
 
 ## 需要和产品沟通
 
@@ -64,6 +66,19 @@
 
 ## Finished
 
+* [x] 偶尔出现：明星排行榜-高度会显示
+* [x] 隐藏排行榜和其他高度
+
+* [x]  饭票的小数位-整理可能发生的饭票小数点，所有位置，整理类型并测试
+* [x] 服务端小数处理-cut2DecimalFloatByFloat改成reviseFloatString
+
+* [x] 服务端发布接口错误时候，App不断请求,  网络权限不开的时候，viewDidLayoutSubviews不断调用
+* [x] SDWebImage加载的时候添加加载动画
+* [x] 微信助手添加限免图标- 检查
+
+* [x] 添加-没有期数的默认页
+* [x] 分享页拉起才显示头部的user参数
+* [x] 卡片头部是Web拉起App的时候展示pick过,拉起就展示
 
 * [x] 明星主页的高度计算问题，加了排行榜入口后contentSize高度不对
 * [x] iPhone X启动后出现UI API called on a background thread: -[UIApplication 
