--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,73 +1,9 @@
 ## 问题列表记录
 
-* 点击home滚动到顶部-在滚动中需要停止滚动
-
-### 上线打包的记录
-
-```objc
-
-ExchangeOrderCell.m
-
-打开商品图片
-//    [productImgView setImageWithURL:[NSURL URLWithString:_exchangeOrder.productImg] placeholderImage:GetImgName(@"productItem_banner_placeHolder") animated:true];
-
-UserCertProductDetailVC.m
-```
-
-### 注销成功的退出问题-不需要再次pop
-
-```objc
-#import "UserSettingVC.h"
-用户设置
-                /* 注销成功，退出 */
-                [PushMangerInstance gotoLogout:^{
-                    [PushMangerInstance resetNavigationControllerWithIndex:TabBarIndex_Home];
-                    [weakSelf.navigationController popViewControllerAnimated:YES];
-                }];
-
-```
-
-### 排行榜Todo
-
-* [ ] 排行榜首页的banner入口
-* [ ] 空视图的展示优化
-* [ ] 卡片头部是Web拉起App的时候展示pick过
-
-/** 商品虚拟id，用于查询兑换记录证书信息 */
-@property (nonatomic, copy) NSString *productVirtualId;
-删除这行
-
-subLabel改成2行
-    // update frame
-    [subLabel sizeToFit];
-    if (subLabel.height > subLabel.font.lineHeight) subLabel.height = subLabel.font.lineHeight *2;
-    triangleArrowImgV.top = subLabel.bottom + 12*ScreenWidth6Ratio;
-    descLabel.top = triangleArrowImgV.bottom;
-    
-    CGFloat certTop = descLabel.bottom + 32*ScreenWidth6Ratio;
-    
-    commonwealImgV.top = certTop;
-    certNumImgV.top = certTop;    
-    CGFloat fansLogoTop = certNumImgV.bottom + 24*ScreenWidth6Ratio;
-    
-    spLine.top = fansLogoImgV.top = activityImgV.top = fansLogoTop;
-
-```
-
-### 排行榜问题优化
-
-
-* [ ] 优化-小数点浮动数字
-
-* [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
-* [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
-* [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-* [ ]  UIinputwindowcontroller研究
-![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
-* [ ] 跑马灯按照数字添加---不太现实，需要计算每个cell的内容宽度和分类饭票个数
-
-
 ## 需求
+
+* [ ] 明星主页改版
+* [ ] 排行榜改版
 
 * [ ] 打榜demo查看
 * [ ] 评论需求和详情页
@@ -78,12 +14,19 @@ subLabel改成2行
 ## 后续优化
 
 * [ ] 进度条添加动画
-* [ ] TabbarItem再次点击回到底部
+* [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
+* [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
 * [ ]  UIinputwindowcontroller研究
 ![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
+
+### 排行榜问题优化
+
+* [ ] 跑马灯按照数字添加---不太现实，需要计算每个cell的内容宽度和分类饭票个数
+* [ ] 点击home滚动到顶部-在滚动中需要停止滚动
+* [ ] 优化-小数点浮动数字
 
 
 ## 需要和产品沟通
@@ -94,6 +37,9 @@ subLabel改成2行
 
 
 ## Finished
+
+* [x] 排行榜首页的banner入口
+* [x] 空视图的展示优化
 
 * [x] 偶尔出现：明星排行榜-高度会显示
 * [x] 隐藏排行榜和其他高度
