--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -2,10 +2,42 @@
 
 ## 需求
 
-* [ ] 明星主页改版
-* [ ] 排行榜改版
+* [ ] 明星主页：
+    productTickLb.text = @"300 万";
+    bannerTitleLb.text = @"本期应援目标";
+
+* 豆发布了微博 等文案确认
+
+* /** 回调函数--更新排行榜入口信息 */
+- (void)vm_getRankEntryByStarNoCallBack:(PeriodPickInviteModel *)periodPickInviteModel{
+    //是否审核中-隐藏违规信息
+    BOOL isAuditing = [AppArchiverInstance isAuditing];
+    if (isAuditing) return;
+    
+    // 显示打榜入口
+    NSNumber *rankEntryType = @(StarPageModule_DaCall_Hits);
+    BOOL hasRankEntry = [self.daCallTypeArr containsObject:rankEntryType];
+    // 是否开启
+    if (periodPickInviteModel.open) {
+        self.periodPickInviteModel = periodPickInviteModel;
+        if (!hasRankEntry) {
+            // 先回调打榜入口，再插入微信助手入口
+            NSNumber *listType = @(StarPageModule_DaCall_CardList);
+            NSInteger listIndex = [self.daCallTypeArr indexOfObject:listType];
+            [self.daCallTypeArr insertObject:rankEntryType atIndex:listIndex + 1];
+        }
+    }else{
+        if (hasRankEntry) [self.daCallTypeArr removeObject:rankEntryType];
+    }
+    [self.mTable reloadData];
+}
+
+
+
+小助手
 
 * [ ] 打榜demo查看
+
 * [ ] 评论需求和详情页
 * [ ] 排行榜C位需求
 
@@ -13,6 +45,7 @@
 
 ## 后续优化
 
+* [ ] 详情链接可以跳转
 * [ ] 进度条添加动画
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
@@ -31,12 +64,25 @@
 
 ## 需要和产品沟通
 
+* [ ] 用新包发布
+* [ ] 申请企业证书
+
 ## 需要和设计沟通
+
+* [ ] 明星主页的tvIcon
+* [ ] 明星主页行程占位图
+* [ ] 打榜整块图标
+* [ ] 渐变色图标
+
 
 ## 需要和后端沟通
 
 
 ## Finished
+
+* [x] 明星主页改版
+* [x] 排行榜改版
+* [x] 排行榜GIF
 
 * [x] 排行榜首页的banner入口
 * [x] 空视图的展示优化
