--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -2,46 +2,16 @@
 
 ## 需求
 
-* [ ] 明星主页：
-    productTickLb.text = @"300 万";
-    bannerTitleLb.text = @"本期应援目标";
 
-* 豆发布了微博 等文案确认
-
-* /** 回调函数--更新排行榜入口信息 */
-- (void)vm_getRankEntryByStarNoCallBack:(PeriodPickInviteModel *)periodPickInviteModel{
-    //是否审核中-隐藏违规信息
-    BOOL isAuditing = [AppArchiverInstance isAuditing];
-    if (isAuditing) return;
-    
-    // 显示打榜入口
-    NSNumber *rankEntryType = @(StarPageModule_DaCall_Hits);
-    BOOL hasRankEntry = [self.daCallTypeArr containsObject:rankEntryType];
-    // 是否开启
-    if (periodPickInviteModel.open) {
-        self.periodPickInviteModel = periodPickInviteModel;
-        if (!hasRankEntry) {
-            // 先回调打榜入口，再插入微信助手入口
-            NSNumber *listType = @(StarPageModule_DaCall_CardList);
-            NSInteger listIndex = [self.daCallTypeArr indexOfObject:listType];
-            [self.daCallTypeArr insertObject:rankEntryType atIndex:listIndex + 1];
-        }
-    }else{
-        if (hasRankEntry) [self.daCallTypeArr removeObject:rankEntryType];
-    }
-    [self.mTable reloadData];
-}
-
-
-
-小助手
+* 明星主页的模块刷新优化
 
 * [ ] 打榜demo查看
 
 * [ ] 评论需求和详情页
 * [ ] 排行榜C位需求
 
-* [ ] 请求超时的提示
+* [ ] 上线时候，明星主页的审核状态
+
 
 ## 后续优化
 
