--- a/项目相关/项目交互.md
+++ b/项目相关/项目交互.md
@@ -23,3 +23,10 @@ C.转场代理 (Transitioning Delegates) 根据不同的转场类型方便的提
    其中UINavigationControllerDelegate delegate 中新增了2个方法给NavigationController
                UIViewControllerTransitioningDelegate 新增transitioningDelegate  给Modal的Present和Dismis
 
+
+
+
+### iOS动画-扩散波纹效果
+
+* [iOS动画-扩散波纹效果 - 掘金](https://juejin.im/post/5aaccee16fb9a028c3689084)
+* [Mervin1024/LearnAnimation: 有关于iOS动画的各种尝试](https://github.com/Mervin1024/LearnAnimation)
