--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -2,21 +2,11 @@
 
 ## 需求
 
-
-* configCellByModel刷新cell不起作用吗？
-
-* [ ] 打榜demo查看
-
-* [ ] 评论需求和详情页
-* [ ] 排行榜C位需求
-
-* [ ] 上线时候，明星主页的审核状态
-
+* [ ] 明星主页显示空视图
 
 ## 后续优化
 
 * [ ] 详情链接可以跳转
-* [ ] 进度条添加动画
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
@@ -131,6 +121,7 @@
 * [x] 明星主页优化，改成ViewModel
 * [x] 发现行程文案没有同步bug
 
+* [x] 首页Xib视图Cell的高度+cellMargin后的计算
 
 ## 备注
 
