--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -2,7 +2,6 @@
 
 [iOS-LibraryCollections: iOS常用三方库、三方库、iOS开源项目、插件、知名技术博客、iOS三方库、常用开发工具使用介绍等等，大家可以一次性下载了！](https://gitee.com/Liu0515/iOS-LibraryCollections)
 
-
 ## UI
 
 ### 导航
@@ -20,10 +19,72 @@
 
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
+## QMUI_iOS
+
 ### 瀑布流：
               
 1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
 2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
+
+## App审核
+
+隐藏被暴露之后怎么办 (几点供参考)
+
+https://github.com/wg689/Solve-App-Store-Review-Problem/blob/master/sex_offensive.md#%E9%97%AE%E9%A2%98%E5%A6%82%E4%BD%95%E9%9A%90%E8%97%8F%E9%83%A8%E5%88%86%E5%8A%9F%E8%83%BD
+
+## 支付
+
+* 支付宝
+* 微信
+* 银联
+
+
+## 动画
+
+UIView动画- http://zhanjingbo.site/iOS%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0_2.html
+
+动画时间 - https://github.com/domhofmann/PRTween
+
+## Label数字滚动效果
+
+https://github.com/pujiaxin33/JXMarqueeView
+https://www.jianshu.com/p/5dd342b8a640
+
+
+## 知乎上下文切换效果
+
+https://github.com/zhangshijian/UIViewControllerDemo
+http://www.10tiao.com/html/216/201710/2652553915/2.html
+Navi动画切换
+[QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
+
+[iOS 自定义转场动画浅谈](http://www.demodashi.com/demo/11612.html)
+
+1. 自定义控制器的转场动画（Push、Pop） http://ios.jobbole.com/90272/
+https://github.com/JohnsonChouxin/JC_NavTransitionAnimation
+https://www.jianshu.com/p/59224648828b#
+push和pop转场动画基本流程
+https://github.com/cnthinkcode/HSPresentTransitionDemo
+https://www.jianshu.com/p/4d2fea0f6ecc
+
+## 库
+
+https://github.com/Jeykit/MUKit
+
+1. MUPopupView
+2. UIScrollView嵌套滚动的
+
+
+## 微软翻译：
+
+1. https://docs.microsoft.com/zh-cn/azure/cognitive-services/speech-service/quickstart-objectivec-ios  语音翻译
+2. https://azure.microsoft.com/zh-cn/pricing/details/cognitive-services/translator-text-api/ 每月 200 万个字符免费
+ 1. 百度每月200万字符下免费
+ 2. 有道收费,初始送100元体验金
+3.谷歌翻译纯英文文档.
+百度翻译：https://blog.csdn.net/xfy6238/article/details/79079627
+搜狗文本： http://ai.sogou.com/ai-docs/api/fanyi，  https://deepi.sogou.com/
+
 
 
 ## 电商模块
