--- a/项目相关/项目-问题列表记录.md
+++ b/项目相关/项目-问题列表记录.md
@@ -2,14 +2,17 @@
 
 ## 需求
 
-* [ ] 明星主页显示空视图
+### 审核问题
+
+* [苹果开发中文网站-“正在等待审核”16天 | App Store经验交流 - CocoaChina CocoaChina_让移动开发更简单](http://www.cocoachina.com/bbs/read.php?tid-1730012.html)
+* [最近 apple 审核很慢了么 - V2EX](https://www.v2ex.com/t/416505)
+
 
 ## 后续优化
 
 * [ ] 详情链接可以跳转
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
-* [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
 * [ ]  UIinputwindowcontroller研究
