--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -51,12 +51,10 @@ https://github.com/pujiaxin33/JXMarqueeView
 https://www.jianshu.com/p/5dd342b8a640
 
 
-## 知乎上下文切换效果
+## 转场动画
 
-https://github.com/zhangshijian/UIViewControllerDemo
-http://www.10tiao.com/html/216/201710/2652553915/2.html
-Navi动画切换
-[QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
+[视图控制器详解](https://github.com/zhangshijian/UIViewControllerDemo)
+
 
 [iOS 自定义转场动画浅谈](http://www.demodashi.com/demo/11612.html)
 
@@ -66,6 +64,11 @@ https://www.jianshu.com/p/59224648828b#
 push和pop转场动画基本流程
 https://github.com/cnthinkcode/HSPresentTransitionDemo
 https://www.jianshu.com/p/4d2fea0f6ecc
+
+
+### 知乎上下文切换效果
+
+[QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
 
 ## 库
 
@@ -140,7 +143,9 @@ https://github.com/Jeykit/MUKit
 
 ### 视频直播
 
-[sshiqiao/douyin-ios-objectc: iOS高仿抖音app，demo"复制"了抖音个人主页、视频播放列表、IM即时聊天页面。](https://github.com/sshiqiao/douyin-ios-objectc)
+
+* [zhengwenming/WMPlayer: WMPlayer+WNPlayer万能播放器，内部封装了AVPlayer和FFmpeg最新版本(4.0.2)，两款播放器完全解耦设计，没有使用废弃api，支持几乎所有视频格式(avi、flv、m3u8、3gp、RTMP、MKV、rmvb、wmv、mp4、mov)，网络和本地视频同时支持](https://github.com/zhengwenming/WMPlayer) 支持全屏
+* [sshiqiao/douyin-ios-objectc: iOS高仿抖音app，demo"复制"了抖音个人主页、视频播放列表、IM即时聊天页面。](https://github.com/sshiqiao/douyin-ios-objectc) 高仿抖音视频[抖音Object-C版介绍](https://sshiqiao.github.io/document/douyin-objectc.html)
 
 
 ## Web
