--- a/项目相关/项目-问题回顾.md
+++ b/项目相关/项目-问题回顾.md
@@ -415,6 +415,92 @@ _mTable.estimatedRowHeight = StarRankCell_CellHeight_Default;
 其实是会调用一次的，后来发现是以为该页面改成Feed流形式后，继承UINavigationControllerDelegate，自定义了转场动画,调用PushVC的时候，其实没有走原来的Push方法，造成不调用navi代理。
 
 
+### HTML转富文本
+
+```objc
+NSString * htmlString = @"<html><body> Some html string </body></html>";
+NSAttributedString * attrStr = [[NSAttributedString alloc] initWithData:[htmlString dataUsingEncoding:NSUnicodeStringEncoding] options:@{ NSDocumentTypeDocumentAttribute: NSHTMLTextDocumentType } documentAttributes:nil error:nil];
+
+UILabel * myLabel = [[UILabel alloc] init];
+myLabel.attributedText = attrStr;
+```
+
+
+```objc
+- (NSAttributedString *)attributedStringWithHTMLString:(NSString *)htmlString
+
+{
+
+NSDictionary *options = @{ NSDocumentTypeDocumentAttribute : NSHTMLTextDocumentType,
+
+NSCharacterEncodingDocumentAttribute :@(NSUTF8StringEncoding) };
+
+NSData *data = [htmlString dataUsingEncoding:NSUTF8StringEncoding];
+
+return [[NSAttributedString alloc] initWithData:data options:options documentAttributes:nil error:nil];
+
+}
+```
+ 
+- 参考：
+    - 1. [How to show an HTML string on a UILabel in iOS? - Stack Overflow](https://stackoverflow.com/questions/19946251/how-to-show-an-html-string-on-a-uilabel-in-ios)
+    - 2. [iOS 开发_NSAtrributeString与HTML之间的相互转换 - 简书](https://www.jianshu.com/p/aa92f597ed55)
+ 
+
+### 富文本点击问题
+
+1. 使用UITextView可以实现link点击，但是如果使用Label,需要遍历link，然后添加。
+
+[ios - nsattributedstring link uilabel - How can I make a clickable link in an NSAttributedString? - CODE Q&A Solved](https://code.i-harness.com/en/q/14a0b58)
+
+提供一种添加link,的方式
+```objc
+I needed to keep using a pure UILabel, so called this from my tap recognizer (this is based on malex's response here: Character index at touch point for UILabel )
+
+UILabel* label = (UILabel*)gesture.view;
+CGPoint tapLocation = [gesture locationInView:label];
+
+// create attributed string with paragraph style from label
+
+NSMutableAttributedString* attr = [label.attributedText mutableCopy];
+NSMutableParagraphStyle* paragraphStyle = [NSMutableParagraphStyle new];
+paragraphStyle.alignment = label.textAlignment;
+
+[attr addAttribute:NSParagraphStyleAttributeName value:paragraphStyle range:NSMakeRange(0, label.attributedText.length)];
+
+// init text storage
+
+NSTextStorage *textStorage = [[NSTextStorage alloc] initWithAttributedString:attr];
+NSLayoutManager *layoutManager = [[NSLayoutManager alloc] init];
+[textStorage addLayoutManager:layoutManager];
+
+// init text container
+
+NSTextContainer *textContainer = [[NSTextContainer alloc] initWithSize:CGSizeMake(label.frame.size.width, label.frame.size.height+100) ];
+textContainer.lineFragmentPadding  = 0;
+textContainer.maximumNumberOfLines = label.numberOfLines;
+textContainer.lineBreakMode        = label.lineBreakMode;
+
+[layoutManager addTextContainer:textContainer];
+
+// find tapped character
+
+NSUInteger characterIndex = [layoutManager characterIndexForPoint:tapLocation
+                                                  inTextContainer:textContainer
+                         fractionOfDistanceBetweenInsertionPoints:NULL];
+
+// process link at tapped character
+
+[attr enumerateAttributesInRange:NSMakeRange(characterIndex, 1)
+                                         options:0
+                                      usingBlock:^(NSDictionary<NSString *,id> * _Nonnull attrs, NSRange range, BOOL * _Nonnull stop) {
+                                          if (attrs[NSLinkAttributeName]) {
+                                              NSString* urlString = attrs[NSLinkAttributeName];
+                                              NSURL* url = [NSURL URLWithString:urlString];
+                                              [[UIApplication sharedApplication] openURL:url];
+                                          }
+                                      }];
+```
 
 ## 动画
 
@@ -546,38 +632,6 @@ indexOfObjectIdenticalTo checks for the exact same id (same address).  indexOfOb
     }
 
 ```
- 
-
-### HTML转富文本
-
-```objc
-NSString * htmlString = @"<html><body> Some html string </body></html>";
-NSAttributedString * attrStr = [[NSAttributedString alloc] initWithData:[htmlString dataUsingEncoding:NSUnicodeStringEncoding] options:@{ NSDocumentTypeDocumentAttribute: NSHTMLTextDocumentType } documentAttributes:nil error:nil];
-
-UILabel * myLabel = [[UILabel alloc] init];
-myLabel.attributedText = attrStr;
-```
-
-
-```objc
-- (NSAttributedString *)attributedStringWithHTMLString:(NSString *)htmlString
-
-{
-
-NSDictionary *options = @{ NSDocumentTypeDocumentAttribute : NSHTMLTextDocumentType,
-
-NSCharacterEncodingDocumentAttribute :@(NSUTF8StringEncoding) };
-
-NSData *data = [htmlString dataUsingEncoding:NSUTF8StringEncoding];
-
-return [[NSAttributedString alloc] initWithData:data options:options documentAttributes:nil error:nil];
-
-}
-```
- 
-- 参考：
-    - 1. [How to show an HTML string on a UILabel in iOS? - Stack Overflow](https://stackoverflow.com/questions/19946251/how-to-show-an-html-string-on-a-uilabel-in-ios)
-    - 2. [iOS 开发_NSAtrributeString与HTML之间的相互转换 - 简书](https://www.jianshu.com/p/aa92f597ed55)
  
  
 
