--- a/代码回顾-性能优化/ 解析-设计模式.md
+++ b/代码回顾-性能优化/ 解析-设计模式.md
@@ -1,3 +1,132 @@
+
+
+# 解析-设计模式
+
+
+[面向对象设计的六大设计原则（附 Demo & UML类图） - 掘金](https://juejin.im/post/5b9526c1e51d450e69731dc2)
+
+
+
+原则一：开闭原则（Open Close Principle）
+定义
+
+Software entities (classes, modules, functions, etc.) should be open for extension, but closed for modification.
+
+即：一个软件实体如类、模块和函数应该对扩展开放，对修改关闭。
+定义的解读
+
+用抽象构建框架，用实现扩展细节。
+不以改动原有类的方式来实现新需求，而是应该以实现事先抽象出来的接口（或具体类继承抽象类）的方式来实现。
+
+优点
+实践开闭原则的优点在于可以在不改动原有代码的前提下给程序扩展功能。增加了程序的可扩展性，同时也降低了程序的维护成本。
+代码讲解
+
+
+## 原则二：单一职责原则（Single Responsibility Principle）
+
+类职责的变化往往就是导致类变化的原因：也就是说如果一个类具有多种职责，就会有多种导致这个类变化的原因，从而导致这个类的维护变得困难。
+
+
+
+
+
+## 单例模式
+
+
+
+### dispatch_once
+
+
+
+```
+static id obj = nil;
++(instancetype)shareInstance
+{
+    static dispatch_once_t onceToken;
+    dispatch_once(&onceToken, ^{
+        obj = [[SingletonObj alloc] init];
+    });
+    return obj;
+}
+```
+
+dispatch_once可以用来初始化一些全局的数据，它能够确保block代码在app的生命周期内仅被运行一次，而且还是线程安全的，不需要额外加锁；predicate必须指向一个全局或者静态的变量，不过使用predicate的话结果是未定义的，不过predicate有啥作用，如何实现block在整个生命周期执行一次？那我们只能从源码查找(源码地址：once)。
+
+让我们来看看dispatch_once是如何确保block只执行一次。简单来说，当线程A在调用执行block并设置predicate为DISPATCH_ONCE_DONE(~0l)期间，如果有其他线程也在调用disptach_once，则这些线程会等待，各线程对应的信号量会加入到信号量链表中，等predicate设置为DISPATCH_ONCE_DONE后，也就是block执行完了，会根据信号量链表唤醒各个线程使其继续执行。
+
+![](http://oc98nass3.bkt.clouddn.com/15328740834705.jpg)
+  现在我们清楚dispatch_once是如何确保block只执行一次了，关键就在predict这个值，通过比较这个值等于0或者~0l来判断block是否执行过，这也就是为啥我们需要将这个值设为static或者全局的缘故，因为各个线程都要去访问这个predict，有兴趣的可以试试把predicate的初始值设为非0或者非静态全局变量会发生什么～～
+
+
+
+#### synchronized
+
+使用synchronized方法实现：
+
+
+```static id obj = nil;
++(instancetype)shareInstance
+{
+    @synchronized(self) {
+        if (!obj) {
+            obj = [[SingletonObj alloc] init];
+        }
+    }
+    return obj;
+}
+
+```
+
+
+翻看苹果的文档可以发现 @synchronized指令内部使用锁来实现多线程的安全访问，并且隐式添加了一个异常处理的handler，当异常发生时会自动释放锁。在stackoverflow上看到@synchronized指令其实可以转换成objc_sync_enter跟objc_sync_exit，可以在<objc/objc-sync.h>头文件中找到这两个函数:
+
+
+```objc
+//Allocates recursive pthread_mutex associated with 'obj' if needed
+int objc_sync_enter(id obj)
+
+//End synchronizing on 'obj'
+int objc_sync_exit(id obj)
+
+```根据注释文档，objc_sync_enter会根据需要给每个传进来的对象创建一个互斥锁并lock，然后objc_sync_exit的时候unlock，这样就可以通过这个锁来实现多线程的安全访问，所以结合苹果文档可以认为
+
+```objc
+@synchronized(self) {
+    //thread safe code
+}
+等价于
+
+@try {
+    objc_sync_enter(self);
+    // thread safe code
+} @finally {
+    objc_sync_exit(self);    
+}
+```
+
+###  block 和 Delegate
+
+* 代理和 block 实际上都是函数 imp 的调用，但区别是，代理就等价于 weak 持有一个代理对象，你不写 protocol 不写 delegate ，一股脑把所有方法全写在 header 里，然后把代理对象本身直接传过去给另一个对象，在另一个对象中 weak 持有这个代理对象，这种写法和代理是没有区别的。
+
+* 而 block 是一种还原上下文环境，甚至自动包裹一些自由变量的闭包概念，换句话说，block 的回调代码，和写 block 的代码，是可以同处于一个函数内，在一个可读代码上下文内，即 block 在代码上是一个连续的过程。
+
+* 代理方法实际上传值传的是一整个对象，你把 a.delegate = self 其实是把 self 传给了 a 持有，跟一般的属性赋值无异，如果再次传递，完全可以继续传递 self 给别人。
+
+* block 继续传递，实际上是把 imp 和上下文环境的自动变量打包进行传递，这个过程中不一定会传递一个对象。从这个角度看 block 的控制力度更强一些。
+
+* 这里会涉及到一个安全性方面的考虑，你把 self 传给了一个不知名的三方库，他虽然只是 id 看起来只能调用 protocol 里限定的方法，但其实 OC 这个约束只是骗骗编译器的。如果你把一个 self 传给了一个三方，设定为代理，如果三方有其他意图，他其实可以直接控制你的 self 对象的任意值或者方法。但 block ，你传过去的 block ，他只能操作 block 本身包裹的上下文环境。
+
+
+## 参考
+
+1. [细说@synchronized和dispatch_once - 简书](https://www.jianshu.com/p/ef3f77c8b320)
+2. [由 NSObject *obj 引发的一二事儿 - 掘金](https://juejin.im/post/5b63b857e51d455f5f4d1d74)
+
+
+
+
+
 # iOS 设计模式 Design Patterns
 
 ## 常见设计模式
