--- a/项目相关/项目-问题列表记录.md
+++ b/项目相关/项目-问题列表记录.md
@@ -1,5 +1,7 @@
 ## 问题列表记录
 
+* [ ] 明星页，商品第一次加载没有loading
+
 ## 需求
 
 ### 审核问题
@@ -10,7 +12,6 @@
 
 ## 后续优化
 
-* [ ] 详情链接可以跳转
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
@@ -125,6 +126,7 @@
 * [x] 发现行程文案没有同步bug
 
 * [x] 首页Xib视图Cell的高度+cellMargin后的计算
+* [x] 详情链接可以跳转
 
 ## 备注
 
