--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -19,12 +19,17 @@
 
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
-## QMUI_iOS
+### QMUI_iOS
 
 ### 瀑布流：
               
 1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
 2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
+
+### App启动开屏广告
+
+[CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
+
 
 ## App审核
 
@@ -147,6 +152,10 @@ https://github.com/Jeykit/MUKit
 * [zhengwenming/WMPlayer: WMPlayer+WNPlayer万能播放器，内部封装了AVPlayer和FFmpeg最新版本(4.0.2)，两款播放器完全解耦设计，没有使用废弃api，支持几乎所有视频格式(avi、flv、m3u8、3gp、RTMP、MKV、rmvb、wmv、mp4、mov)，网络和本地视频同时支持](https://github.com/zhengwenming/WMPlayer) 支持全屏
 * [sshiqiao/douyin-ios-objectc: iOS高仿抖音app，demo"复制"了抖音个人主页、视频播放列表、IM即时聊天页面。](https://github.com/sshiqiao/douyin-ios-objectc) 高仿抖音视频[抖音Object-C版介绍](https://sshiqiao.github.io/document/douyin-objectc.html)
 
+
+## 支付
+
+[CoderZhuXH/XHPayKit: 🔥不用官方SDK实现微信支付、支付宝支付](https://github.com/CoderZhuXH/XHPayKit)
 
 ## Web
 
