uopdate AutoLayout & 内存管理

--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -141,6 +141,12 @@ https://github.com/Jeykit/MUKit
 
 ## 图片视频
 
+## 网络图片尺寸
+
+[CoderZhuXH/XHWebImageAutoSize: 网络图片尺寸、高度自适应/适配 - 支持异步缓存imageSize , 支持动态刷新界面](https://github.com/CoderZhuXH/XHWebImageAutoSize)
+
+[iOS网络图片尺寸适配 — it7090.com](http://it7090.com/2016/12/05/iOS%E7%BD%91%E7%BB%9C%E5%9B%BE%E7%89%87%E5%B0%BA%E5%AF%B8%E9%80%82%E9%85%8D/)
+
 ### 相册选择器
 
 [indulgeIn/YBImageBrowser: iOS图片浏览器 (支持视频) / image browser (support video) —— Latest version : 2.0.6](https://github.com/indulgeIn/YBImageBrowser)
