--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -183,6 +183,7 @@ https://segmentfault.com/q/1010000000151528
 
 [luoyanbei/Alipay_AntForest: iOS版支付宝，一键收取蚂蚁森林全部好友能量，一键帮好友收取能量，定时收取能量,为好友浇水](https://github.com/luoyanbei/Alipay_AntForest)
 
+
 ## App优化
 
 [jezzmemo/JJException: Protect the objective-c application(保护App不闪退)](https://github.com/jezzmemo/JJException)
@@ -242,5 +243,9 @@ https://blog.csdn.net/zhhelnice/article/details/82387716#code-signing-os-x-keych
 CaptainHook Tweak、Logos Tweak and Command-line Tool、Patch iOS Apps, Without Jailbreak.
 支持通过CocoaPods第三方应用集成SDK以及非越狱插件，简单来说就是通过CocoaPods搭建了一个非越狱插件商店。
 
+## App工具
 
+### 正则表达式检测
+
+[LiCheng244/LCRegExpToolDemo: 封装的一个正则表达式验证的工具类](https://github.com/LiCheng244/LCRegExpToolDemo)
 
