--- a/项目相关/项目-问题回顾.md
+++ b/项目相关/项目-问题回顾.md
@@ -87,9 +87,53 @@
 
 * 还有种思路就是tabbar交给table的`sectionHeader`,子视图放在一个横向滚动的tableViewCell中,就比较简单，[liuzhongning/NNJaneBookView: 仿简书个人主页多页面滑动视图。](https://github.com/liuzhongning/NNJaneBookView/tree/fa7c984710a13f6431a5d5bba12292e5a9c3f2b5)
 
-参考 
+#### 使用UIKit Dynamics模仿UIScrollView-饿了么的实践
+
+在刚接到这个任务的时候, 有过几种想法:
+
+1.  这个效果很像是UITableView加上Header的Parallel效果
+2.  可以在一个UIScrollView上面嵌套一个UITableView作为子视图
+
+这些方案都被否决了. 第一种方案, 因为当前页面不仅有两个TableView(食物类别和菜单), 而且要支持左右滚动在”商品”, “评价”, “详情”三个页面切换. 用TableView的header做视差效果是不太可能做到的. 对第二种方案, 是在 `-[UIScrollViewDelegate scrollViewDidScroll:]` 中再手动修改其中一个ScrollView的 `contentOffset` , 使得当前的两个scrollView的 `contentOffset` 都是正确的, 但是难点是很难去指定手指在屏幕上滑动的时候, 是父view还是子view的UIPanGestureRecognizer手势被响应. 而考虑先禁用其中的一个手势(比如子view的), 先让父View的手势可以驱动父View的 `contentOffset` 改变, 直到父view的 `contentOffset` 到了某个位置再启用子view的手势, 禁用父view的. 这带来一个问题, 在切换手势的enable的时候, 即使手指没有离开屏幕, 但是手势已经禁用, 导致滚动中断, 除非手指离开屏幕后重新触摸才能再次滚动, 这样的效果比较不流畅, 并且其中的逻辑比较复杂, 不太容易处理. 或者子类UIScrollView和UITableView, 在手势代理 `gestureRecognizer:shouldRecognizeSimultaneouslyWithGestureRecognizer` 返回YES, 使得两个ScrollView可以同时滚动, 然后在 `scrollViewDidScroll:` 中还原其中一个ScrollView的contentOffset. 但是这样导致逻辑变得复杂, 因为视图中的手势太多. 把ScrollView添加为另一个ScrollView的子视图并不推荐.
+
+![](https://i.loli.net/2019/01/17/5c40284b27713.jpg)
+
+最后, 考虑到这个效果订制程度很高, 于是自己去模仿一下UIScrollView的特性.
+
+首先说明一下视图的结构:
+
+```objc
+<ParentViewController.View>
+ | <Container> //UIView
+  |  | <SegmentView>
+  |  | <ScrollView> //仅左右滑动(pagingEnabled)
+  |  |  | <ChildViewController1.View>
+  |  |  |  | <CategoryListView>
+  |  |  |  | <FoodListView>
+  |  |  | <ChildViewController2.View>
+  |  |  |  | <RatingListView>
+  |  |  | <ChildViewController3.View>
+  |  |  |  | <SummaryListView>
+
+```
+ParentViewController就是从首页Push进入的ViewController, 在它的View上放置了一个Container(一个普通的UIView), Container的上方是SegmentView,下方是一个左右滑动的ScrollView; 在ScrollView上, 从左往右放置了三个ViewController的View; 所有的tableView视图的bounce都禁用. 由于使用了AutoLayout,
+
+```objc
+ViewController
+
+[Container mas_makeConstraints:^(MASConstraintMaker *make) {
+ make.left.right.bottom.equalTo(ParentViewController.View); 
+ make.top.equalTo(ParentViewController.View).offset(topOffset);
+}];
+
+```
+
+[UIScrollView's Inertia, Bouncing and Rubber-Banding with UIKit Dynamics – Arek Holko](https://holko.pl/2014/07/06/inertia-bouncing-rubber-banding-uikit-dynamics/)
 
 
+#### 参考 
+
+* [用UIKit Dynamics模仿UIScrollView - 推酷](https://www.tuicool.com/articles/QVJnAbB)
 * [JXPageListView](https://github.com/pujiaxin33/JXPageListView)
 * [iOS:高仿闲鱼、京东等列表底部分页视图 | iOSCaff - 专业的 iOS 开发者社区](https://ioscaff.com/articles/215)
 * [HVScrollView](https://github.com/SPStore/HVScrollView)
