--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -1,8 +1,38 @@
-## 项目备用库
+# 项目备用库
 
 [iOS-LibraryCollections: iOS常用三方库、三方库、iOS开源项目、插件、知名技术博客、iOS三方库、常用开发工具使用介绍等等，大家可以一次性下载了！](https://gitee.com/Liu0515/iOS-LibraryCollections)
 
-## UI
+### **QMUI_iOS**
+
+[QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
+
+### [**MUKit**](https://github.com/Jeykit/MUKit)
+
+1. MUPopupView
+2. UIScrollView嵌套滚动的
+
+# UI
+
+## 文案
+
+
+Popover 弹窗
+
+[eonist/Popover-label: Popover label for iOS](https://github.com/eonist/Popover-label)
+
+滚动效果
+
+* [JXMarqueeView](https://github.com/pujiaxin33/JXMarqueeView)
+* https://www.jianshu.com/p/5dd342b8a640
+## 富文本
+
+### 评论
+
+1. ATDemo: iOS中@功能的实现 https://github.com/lisongrc/ATDemo
+2. 富文本 hon-key/NudeIn: A easy-to-use attributed text component，use like masonry  https://github.com/hon-key/NudeIn
+
+[tophat/RichTextView: iOS Text View (UIView) that Properly Displays LaTeX, HTML, Markdown, and YouTube/Vimeo Links](https://github.com/tophat/RichTextView)
+
 
 ### 导航
 
@@ -19,118 +49,13 @@
 
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
-### QMUI_iOS
 
 ### 瀑布流：
               
 1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
 2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
 
-### App启动开屏广告
-
-[CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
-
-
-## App审核
-
-隐藏被暴露之后怎么办 (几点供参考)
-
-https://github.com/wg689/Solve-App-Store-Review-Problem/blob/master/sex_offensive.md#%E9%97%AE%E9%A2%98%E5%A6%82%E4%BD%95%E9%9A%90%E8%97%8F%E9%83%A8%E5%88%86%E5%8A%9F%E8%83%BD
-
-## 支付
-
-* 支付宝
-* 微信
-* 银联
-
-
-## 动画
-
-UIView动画- http://zhanjingbo.site/iOS%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0_2.html
-
-动画时间 - https://github.com/domhofmann/PRTween
-
-## Label数字滚动效果
-
-https://github.com/pujiaxin33/JXMarqueeView
-https://www.jianshu.com/p/5dd342b8a640
-
-
-## 转场动画
-
-[视图控制器详解](https://github.com/zhangshijian/UIViewControllerDemo)
-
-
-[iOS 自定义转场动画浅谈](http://www.demodashi.com/demo/11612.html)
-
-1. 自定义控制器的转场动画（Push、Pop） http://ios.jobbole.com/90272/
-https://github.com/JohnsonChouxin/JC_NavTransitionAnimation
-https://www.jianshu.com/p/59224648828b#
-push和pop转场动画基本流程
-https://github.com/cnthinkcode/HSPresentTransitionDemo
-https://www.jianshu.com/p/4d2fea0f6ecc
-
-
-### 知乎上下文切换效果
-
-[QMUI_iOS/UINavigationController+NavigationBarTransition.m at master · QMUI/QMUI_iOS](https://github.com/QMUI/QMUI_iOS/blob/master/QMUIKit/QMUIComponents/NavigationBarTransition/UINavigationController%2BNavigationBarTransition.m)
-
-## 库
-
-https://github.com/Jeykit/MUKit
-
-1. MUPopupView
-2. UIScrollView嵌套滚动的
-
-
-## 微软翻译：
-
-1. https://docs.microsoft.com/zh-cn/azure/cognitive-services/speech-service/quickstart-objectivec-ios  语音翻译
-2. https://azure.microsoft.com/zh-cn/pricing/details/cognitive-services/translator-text-api/ 每月 200 万个字符免费
- 1. 百度每月200万字符下免费
- 2. 有道收费,初始送100元体验金
-3.谷歌翻译纯英文文档.
-百度翻译：https://blog.csdn.net/xfy6238/article/details/79079627
-搜狗文本： http://ai.sogou.com/ai-docs/api/fanyi，  https://deepi.sogou.com/
-
-
-
-## 电商模块
-
-*[MVVM KVO 购物车 ](http://code.cocoachina.com/view/128713)- 计算购物车价钱
-
-## 键盘
-
-[hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
-
-
-
-## 搜索
-
-1. PYSearch https://github.com/3lvis/Form
-
-## 富文本
-
-### 评论
-
-1. ATDemo: iOS中@功能的实现 https://github.com/lisongrc/ATDemo
-2. 富文本 hon-key/NudeIn: A easy-to-use attributed text component，use like masonry  https://github.com/hon-key/NudeIn
-
-
-## 图表
-
-1. https://github.com/AAChartKit/AAChartKit/blob/master/CHINESE-README.md
-2. [iOS圆弧渐变进度条的实现 - 简书](https://www.jianshu.com/p/edbc647ff178)
-
-## 动画
-
-1. https://github.com/YouXianMing/Animations/tree/master
-2. https://github.com/jhurray/JHChainableAnimations
-3. https://github.com/facebook/pop
-4. https://github.com/mdznr/Spring-Animation
-5. https://github.com/app-developers/top
-
-#### UIScrollView冲突问题
+### UIScrollView冲突问题
 
 1. https://github.com/SPStore/HVScrollView
 2. https://www.jianshu.com/p/8b87837d9e3a
@@ -138,8 +63,16 @@ https://github.com/Jeykit/MUKit
 4. https://github.com/Roylee-ML/SwipeTableView/blob/master/README.md#%E7%A4%BA%E4%BE%8B%E4%BB%A3%E7%A0%81
 5. https://github.com/SPStore/HVScrollView
 
+### App启动开屏广告
+
+[CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
 
 ## 图片视频
+
+### 图表
+
+1. https://github.com/AAChartKit/AAChartKit/blob/master/CHINESE-README.md
+2. [iOS圆弧渐变进度条的实现 - 简书](https://www.jianshu.com/p/edbc647ff178)
 
 ## 网络图片尺寸
 
@@ -158,12 +91,48 @@ https://github.com/Jeykit/MUKit
 * [zhengwenming/WMPlayer: WMPlayer+WNPlayer万能播放器，内部封装了AVPlayer和FFmpeg最新版本(4.0.2)，两款播放器完全解耦设计，没有使用废弃api，支持几乎所有视频格式(avi、flv、m3u8、3gp、RTMP、MKV、rmvb、wmv、mp4、mov)，网络和本地视频同时支持](https://github.com/zhengwenming/WMPlayer) 支持全屏
 * [sshiqiao/douyin-ios-objectc: iOS高仿抖音app，demo"复制"了抖音个人主页、视频播放列表、IM即时聊天页面。](https://github.com/sshiqiao/douyin-ios-objectc) 高仿抖音视频[抖音Object-C版介绍](https://sshiqiao.github.io/document/douyin-objectc.html)
 
+## 键盘
 
-## 支付
+[hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
-[CoderZhuXH/XHPayKit: 🔥不用官方SDK实现微信支付、支付宝支付](https://github.com/CoderZhuXH/XHPayKit)
 
-## Web
+## 搜索
+
+1. [PYSearch](https://github.com/3lvis/Form)
+
+
+## 动画
+
+* [UIView动画](http://zhanjingbo.site/iOS%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0_2.html)
+* [动画时间](https://github.com/domhofmann/PRTween)
+
+1. https://github.com/YouXianMing/Animations/tree/master
+2. https://github.com/jhurray/JHChainableAnimations
+3. https://github.com/facebook/pop
+4. https://github.com/mdznr/Spring-Animation
+5. https://github.com/app-developers/top
+
+### 弹窗
+
+[JonyFang/FFPopup: ⛩Presenting custom views as a popup in iOS.](https://github.com/JonyFang/FFPopup)
+
+### 转场动画
+
+
+[LoongerTao/TLTransitions: 快速实现控制器的转场和View的快速popover显示，并支持自定义动画、手势退场](https://github.com/LoongerTao/TLTransitions)
+
+[视图控制器详解](https://github.com/zhangshijian/UIViewControllerDemo)
+
+[iOS 自定义转场动画浅谈](http://www.demodashi.com/demo/11612.html)
+1. 自定义控制器的转场动画（Push、Pop） http://ios.jobbole.com/90272/
+* https://github.com/JohnsonChouxin/JC_NavTransitionAnimation
+* https://www.jianshu.com/p/59224648828b#
+push和pop转场动画基本流程
+* https://github.com/cnthinkcode/HSPresentTransitionDemo
+* https://www.jianshu.com/p/4d2fea0f6ecc
+
+
+# Web
 
 ## web抓取cookie 
 https://segmentfault.com/q/1010000000151528
@@ -182,6 +151,43 @@ https://segmentfault.com/q/1010000000151528
 ## 定时器
 
 [luoyanbei/Alipay_AntForest: iOS版支付宝，一键收取蚂蚁森林全部好友能量，一键帮好友收取能量，定时收取能量,为好友浇水](https://github.com/luoyanbei/Alipay_AntForest)
+
+# App工具
+
+### 正则表达式检测
+
+[LiCheng244/LCRegExpToolDemo: 封装的一个正则表达式验证的工具类](https://github.com/LiCheng244/LCRegExpToolDemo)
+
+### 微软翻译：
+
+1. https://docs.microsoft.com/zh-cn/azure/cognitive-services/speech-service/quickstart-objectivec-ios  语音翻译
+2. https://azure.microsoft.com/zh-cn/pricing/details/cognitive-services/translator-text-api/ 每月 200 万个字符免费
+ 1. 百度每月200万字符下免费
+ 2. 有道收费,初始送100元体验金
+3.谷歌翻译纯英文文档.
+百度翻译：https://blog.csdn.net/xfy6238/article/details/79079627
+搜狗文本： http://ai.sogou.com/ai-docs/api/fanyi，  https://deepi.sogou.com/
+
+
+# App支持
+
+## App审核
+
+隐藏被暴露之后怎么办 (几点供参考)
+
+https://github.com/wg689/Solve-App-Store-Review-Problem/blob/master/sex_offensive.md#%E9%97%AE%E9%A2%98%E5%A6%82%E4%BD%95%E9%9A%90%E8%97%8F%E9%83%A8%E5%88%86%E5%8A%9F%E8%83%BD
+
+## 支付
+
+* 支付宝
+* 微信
+* 银联
+
+[CoderZhuXH/XHPayKit: 🔥不用官方SDK实现微信支付、支付宝支付](https://github.com/CoderZhuXH/XHPayKit)
+
+## MVVM KVO 电商模块
+
+*[MVVM KVO 购物车 ](http://code.cocoachina.com/view/128713)- 计算购物车价钱
 
 
 ## App优化
@@ -243,9 +249,5 @@ https://blog.csdn.net/zhhelnice/article/details/82387716#code-signing-os-x-keych
 CaptainHook Tweak、Logos Tweak and Command-line Tool、Patch iOS Apps, Without Jailbreak.
 支持通过CocoaPods第三方应用集成SDK以及非越狱插件，简单来说就是通过CocoaPods搭建了一个非越狱插件商店。
 
-## App工具
 
-### 正则表达式检测
-
-[LiCheng244/LCRegExpToolDemo: 封装的一个正则表达式验证的工具类](https://github.com/LiCheng244/LCRegExpToolDemo)
 
