--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -50,7 +50,11 @@ Popover 弹窗
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
 
-### 瀑布流：
+### CollectionView
+
+[Instagram/IGListKit: A data-driven UICollectionView framework for building fast and flexible lists.](https://github.com/Instagram/IGListKit) Instagram的 data-driven UICollectionView framework。
+
+##### 瀑布流：
               
 1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
 2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
@@ -63,16 +67,24 @@ Popover 弹窗
 4. https://github.com/Roylee-ML/SwipeTableView/blob/master/README.md#%E7%A4%BA%E4%BE%8B%E4%BB%A3%E7%A0%81
 5. https://github.com/SPStore/HVScrollView
 
-### App启动开屏广告
+### App启动开屏
 
 [CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
 
+
+### App内通知
+
+[pikachu987/NotificationView: iOS Basic Notification screens 🤚](https://github.com/pikachu987/NotificationView)
+
+## 图表
+
+1. [AAChartKit](https://github.com/AAChartKit/AAChartKit/blob/master/CHINESE-README.md)
+2. [WillkYang/Y_KLine: iOS专业K线第一版：K线主副图、趋势图、成交量、滚动、放大缩小、MACD、KDJ等](https://github.com/WillkYang/Y_KLine)
+3. [philackm/ScrollableGraphView: An adaptive scrollable graph view for iOS to visualise simple discrete datasets. Written in Swift.](https://github.com/philackm/ScrollableGraphView/tree/aa0948b2fce02b1607c4b6855387e114ffcc447a)
+
+4. [iOS圆弧渐变进度条的实现 - 简书](https://www.jianshu.com/p/edbc647ff178)
+
 ## 图片视频
-
-### 图表
-
-1. https://github.com/AAChartKit/AAChartKit/blob/master/CHINESE-README.md
-2. [iOS圆弧渐变进度条的实现 - 简书](https://www.jianshu.com/p/edbc647ff178)
 
 ## 网络图片尺寸
 
@@ -91,14 +103,19 @@ Popover 弹窗
 * [zhengwenming/WMPlayer: WMPlayer+WNPlayer万能播放器，内部封装了AVPlayer和FFmpeg最新版本(4.0.2)，两款播放器完全解耦设计，没有使用废弃api，支持几乎所有视频格式(avi、flv、m3u8、3gp、RTMP、MKV、rmvb、wmv、mp4、mov)，网络和本地视频同时支持](https://github.com/zhengwenming/WMPlayer) 支持全屏
 * [sshiqiao/douyin-ios-objectc: iOS高仿抖音app，demo"复制"了抖音个人主页、视频播放列表、IM即时聊天页面。](https://github.com/sshiqiao/douyin-ios-objectc) 高仿抖音视频[抖音Object-C版介绍](https://sshiqiao.github.io/document/douyin-objectc.html)
 
-## 键盘
-
-[hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
-
 
 ## 搜索
 
 1. [PYSearch](https://github.com/3lvis/Form)
+
+
+## 键盘
+
+[hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
+
+#### 验证码
+
+[zhwayne/WLUnitField: 一种验证码输入 UI 控件](https://github.com/zhwayne/WLUnitField)
 
 
 ## 动画
