--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -59,6 +59,12 @@ Popover 弹窗
 1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
 2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
 
+###  父子控制器
+
+分类切换滚动视图
+
+[pujiaxin33/JXCategoryView: A powerful and easy to use category view (segmentedcontrol, segmentview, pagingview, pagerview, pagecontrol) (腾讯新闻、今日头条、QQ音乐、网易云音乐、京东、爱奇艺、腾讯视频、淘宝、天猫、简书、微博等所有主流APP分类切换滚动视图)](https://github.com/pujiaxin33/JXCategoryView)
+
 ### UIScrollView冲突问题
 
 1. https://github.com/SPStore/HVScrollView
