--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -64,7 +64,7 @@ Popover 弹窗
 分类切换滚动视图
 
 [pujiaxin33/JXCategoryView: A powerful and easy to use category view (segmentedcontrol, segmentview, pagingview, pagerview, pagecontrol) (腾讯新闻、今日头条、QQ音乐、网易云音乐、京东、爱奇艺、腾讯视频、淘宝、天猫、简书、微博等所有主流APP分类切换滚动视图)](https://github.com/pujiaxin33/JXCategoryView)
-
+m
 ### UIScrollView冲突问题
 
 1. https://github.com/SPStore/HVScrollView
@@ -193,6 +193,16 @@ https://segmentfault.com/q/1010000000151528
 
 
 # App支持
+
+
+##  内存
+
+### 循环应用
+
+* [MLeaksFinder：精准 iOS 内存泄露检测工具 | WeRead团队博客](https://wereadteam.github.io/2016/02/22/MLeaksFinder/)
+* [Tencent/MLeaksFinder: Find memory leaks in your iOS app at develop time.](https://github.com/Tencent/MLeaksFinder)
+* [facebook/FBRetainCycleDetector: iOS library to help detecting retain cycles in runtime.](https://github.com/facebook/FBRetainCycleDetector)
+* [tapwork/HeapInspector-for-iOS: Find memory issues & leaks in your iOS app without instruments](https://github.com/tapwork/HeapInspector-for-iOS)
 
 ## App审核
 
