--- a/项目相关/项目-备用库.md
+++ b/项目相关/项目-备用库.md
@@ -15,6 +15,35 @@
 
 # UI
 
+## App配置
+
+### App启动开屏
+
+[CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
+
+
+###  App空页面
+
+[dzenbot/DZNEmptyDataSet: A drop-in UITableView/UICollectionView superclass category for showing empty datasets whenever the view has no content to display](https://github.com/dzenbot/DZNEmptyDataSet)
+
+
+### App内通知
+
+[pikachu987/NotificationView: iOS Basic Notification screens 🤚](https://github.com/pikachu987/NotificationView)
+
+
+### App颜色
+
+[viccalexander/Chameleon: Color framework for Swift & Objective-C (Gradient colors, hexcode support, colors from images & more).](https://github.com/viccalexander/Chameleon)
+
+### App授权
+
+[nickoneill/PermissionScope: Intelligent iOS permissions UI and unified API](https://github.com/nickoneill/PermissionScope/tree/156eb08d1123b68a9f129e9780dcb73b20b894a5)
+
+### App Hud
+
+[SVProgressHUD](https://github.com/SVProgressHUD/SVProgressHUD/tree/e2a6aaa12321962cbe9fbecc370475f369c6566c)
+
 ## 文案
 
 
@@ -52,6 +81,12 @@ Popover 弹窗
 [hackiftekhar/IQKeyboardManager: Codeless drop-in universal library allows to prevent issues of keyboard sliding up and cover UITextField/UITextView. Neither need to write any code nor any setup required and much more.](https://github.com/hackiftekhar/IQKeyboardManager)
 
 
+### TableCell
+
+[MortimerGoro/MGSwipeTableCell: An easy to use UITableViewCell subclass that allows to display swippable buttons with a variety of transitions.](https://github.com/MortimerGoro/MGSwipeTableCell)
+
+![](https://i.imgur.com/BW5mIWv.jpg)
+
 ### CollectionView
 
 [Instagram/IGListKit: A data-driven UICollectionView framework for building fast and flexible lists.](https://github.com/Instagram/IGListKit) Instagram的 data-driven UICollectionView framework。
@@ -66,7 +101,8 @@ Popover 弹窗
 分类切换滚动视图
 
 [pujiaxin33/JXCategoryView: A powerful and easy to use category view (segmentedcontrol, segmentview, pagingview, pagerview, pagecontrol) (腾讯新闻、今日头条、QQ音乐、网易云音乐、京东、爱奇艺、腾讯视频、淘宝、天猫、简书、微博等所有主流APP分类切换滚动视图)](https://github.com/pujiaxin33/JXCategoryView)
-m
+
+
 ### UIScrollView冲突问题
 
 1. https://github.com/SPStore/HVScrollView
@@ -75,14 +111,7 @@ m
 4. https://github.com/Roylee-ML/SwipeTableView/blob/master/README.md#%E7%A4%BA%E4%BE%8B%E4%BB%A3%E7%A0%81
 5. https://github.com/SPStore/HVScrollView
 
-### App启动开屏
 
-[CoderZhuXH/XHLaunchAd: 🔥The screen opening advertising solutions - 开屏广告、启动广告解决方案-支持静态/动态图片广告,mp4视频广告,全屏/半屏广告、兼容iPhone/iPad.](https://github.com/CoderZhuXH/XHLaunchAd)
-
-
-### App内通知
-
-[pikachu987/NotificationView: iOS Basic Notification screens 🤚](https://github.com/pikachu987/NotificationView)
 
 ## 图表
 
@@ -94,7 +123,11 @@ m
 
 ## 图片视频
 
-## 网络图片尺寸
+## 图片像素处理
+
+[BradLarson/GPUImage: An open source iOS framework for GPU-based image and video processing](https://github.com/BradLarson/GPUImage)
+
+### 网络图片尺寸
 
 [CoderZhuXH/XHWebImageAutoSize: 网络图片尺寸、高度自适应/适配 - 支持异步缓存imageSize , 支持动态刷新界面](https://github.com/CoderZhuXH/XHWebImageAutoSize)
 
@@ -136,6 +169,10 @@ m
 3. https://github.com/facebook/pop
 4. https://github.com/mdznr/Spring-Animation
 5. https://github.com/app-developers/top
+
+### 动画Swift
+
+[MengTo/Spring: A library to simplify iOS animations in Swift.](https://github.com/MengTo/Spring)
 
 ### 弹窗
 
