--- a/iOSCocoa💎/内存管理/内存管理机制.md
+++ b/iOSCocoa💎/内存管理/内存管理机制.md
@@ -918,6 +918,68 @@ int main(int argc, const char * argv[]) {
 }
 ```
 
+## 对象的内存结构
+
+一个 Objective-C 对象的内存结构是怎样的？
+
+如果把类的实例看成一个C语言的结构体（struct），它首先包含的是一个 isa 指针，而类的其它成员变量依次排列在结构体中。排列顺序如下图所示：
+
+![](https://pic-mike.oss-cn-hongkong.aliyuncs.com/Blog/20190130133107.png)
+
+
+为了验证该说法，我们在Xcode中新建一个工程，在main.m中运行如下代码：
+
+```objc
+
+#import <UIKit/UIKit.h>
+
+@interface Father : NSObject {    
+    int _father;
+}
+@end@implementation Father
+
+@end
+
+@interface Child : Father {    
+int _child;
+}
+@end
+
+@implementation Child**
+
+@end
+
+int main(int argc, char * argv[])
+{
+
+  Child * child = [[Child alloc] init];  
+  @autoreleasepool {      
+       // ...
+  }
+}
+```
+我们将断点下在 @autoreleasepool 处，然后在Console中输入p *child,则可以看到Xcode输出如下内容，这与我们上面的说法一致。
+
+
+```objc
+(lldb) p *child
+(Child) $0 = {
+  (Father) Father = {
+    (NSObject) NSObject = {
+      (Class) isa = Child
+    }
+    (int) _father = 0
+  }
+  (int) _child = 0
+}
+```
+
+
+因为对象在内存中的排布可以看成一个结构体，该结构体的大小并不能动态变化。所以无法在运行时动态给对象增加成员变量。
+
+注：需要特别说明一下，通过 objc_setAssociatedObject 和 objc_getAssociatedObject方法可以变相地给对象增加成员变量，但由于实现机制不一样，所以并不是真正改变了对象的内存结构。
+
+
 
 ## 参考
 
