--- a/iOSCocoa💎/底层重点知识/变量类型.md
+++ b/iOSCocoa💎/底层重点知识/变量类型.md
@@ -91,6 +91,14 @@ oc有3中数据类型：基础类型，对象类型，id类型
 ```
 属性变量是用于与其他对象交互的变量。**属性变量的好处就是允许让其他对象访问到该变量**（因为属性创建过程中自动产生了set 和get方法）。 当然，你可以设置只读或者可写等，设置方法也可自定义。 现在大家似乎都不怎么喜欢用成员变量来定义类的变量， 都喜欢用属性变量来定义类的变量。把需要与外部接触的变量定义在.h文件中，只在本类中使用的变量定义在.m文件中
 
+### 自动变量
+
+1> 定义：自动变量是存储在堆栈中的。
+
+2> 哪些是自动变量：被关键字auto修饰的局部变量都是自动变量，但是极少使用这个关键字，基本上是废的，因为所有的局部变量在默认情况下都是自动变量。
+
+3> 生命周期：在程序执行到声明自动变量的代码块(函数)时，自动变量才被创建；当自动变量所在的代码块(函数)执行完毕后，这些自动变量就会自行销毁。如果一个函数被重复调用，这些自动变量每次都会重新创建。
+
 ### 局部变量
 
 ```objc
