--- a/数据结构算法/解析-算法/解析-常见算法.md
+++ b/数据结构算法/解析-算法/解析-常见算法.md
@@ -1,16 +1,29 @@
 ## 解析-常见算法
 
 
-* > 排序算法有很多，包括插入排序，冒泡排序，堆排序，归并排序，选择排序，计数排序，基数排序，桶排序，快速排序等。
-* > 插入排序，堆排序，选择排序，归并排序和快速排序，冒泡排序都是比较排序，它们通过对数组中的元素进行比较来实现排序，
-* > 其他排序算法则是利用非比较的其他方法来获得有关输入数组的排序信息。
+* 排序算法有很多，包括插入排序，冒泡排序，堆排序，归并排序，选择排序，计数排序，基数排序，桶排序，快速排序等。
+* 插入排序，堆排序，选择排序，归并排序和快速排序，冒泡排序都是比较排序，它们通过对数组中的元素进行比较来实现排序，
+* 其他排序算法则是利用非比较的其他方法来获得有关输入数组的排序信息。
 
 ## 算法复杂度概览
 
 ![](https://i.imgur.com/sRdng7Y.jpg)
-![](https://i.imgur.com/4pn4Px0.jpg)
+
 复杂度参考图中所示
 
+![](https://i.imgur.com/4pn4Px0.jpg)
+
+
+### 原地排序（Sorted in place）
+
+原地排序算法，就是特指空间复杂度是 O(1) 的排序算法
+稳定性。这个概念是说，如果待排序的序列中存在值相等的元素，经过排序之后，相等元素之间原有的先后顺序不变
+
+
+### 稳定性
+
+
+"稳定性。这个概念是说，如果待排序的序列中存在值相等的元素，经过排序之后，相等元素之间原有的先后顺序不变"
 
 ## 冒泡排序（ O(N^2) ）
 
@@ -28,6 +41,27 @@
 
 ![](https://i.imgur.com/QC3rjiG.jpg)
 
+
+```objc
+// 冒泡排序，a 表示数组，n 表示数组大小
+public void bubbleSort(int[] a, int n) {
+  if (n <= 1) return;
+ 
+ for (int i = 0; i < n; ++i) {
+    // 提前退出冒泡循环的标志位
+    boolean flag = false;
+    for (int j = 0; j < n - i - 1; ++j) {
+      if (a[j] > a[j+1]) { // 交换
+        int tmp = a[j];
+        a[j] = a[j+1];
+        a[j+1] = tmp;
+        flag = true;  // 表示有数据交换      
+      }
+    }
+    if (!flag) break;  // 没有数据交换，提前退出
+  }
+}
+```
 
 ```objc
 #include <stdio.h>
@@ -85,6 +119,7 @@ OC代码实现
 }
 
 ```
+
 
 ### 冒泡排序的执行效率
 
